single_user_clients/templates/espstudio/espstudio.yml
kind: Service
apiVersion: v1
metadata:
  name: espstudio-service
spec:
  selector:
    app: espstudio
  ports:
    - name: "80"
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: espstudio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: espstudio
  template:
    metadata:
      labels:
        app: espstudio
    spec:
      serviceAccountName: esp-operator
      containers:
      - name: espstudio-container
        image: TEMPLATE_ESPSTUDIO_IMAGE
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
