single_user_clients/templates/espstudio/ingress-espstudio.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: espstudio
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  rules:
  - host: TEMPLATE_ESP_NAMESPACE.TEMPLATE_ESP_DOMAIN
    http:
      paths:
      - backend:
          serviceName: espstudio-service # the service to hit
          servicePort: 80            # externally exposed port
        path: /SASEventStreamProcessingStudio
